Final del proyecto

--- a/ServerMutation/ServerMutation.csproj
+++ b/ServerMutation/ServerMutation.csproj
@@ -149,11 +149,10 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50027</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:44395/</IISUrl>
+          <IISUrl>http://localhost:50027/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
+          <CustomServerUrl>https://192.168.137.1</CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
